default/geodata-service-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: geodata-service-svc
  namespace: default
spec:
  type: ExternalName
  externalName: geodata-web-service.geodata.svc.cluster.local
  ports:
  - port: 80
